2008-04-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* iostream/system.h: Update to include definition of
	CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER as appropriate.

2008-04-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c, hello/system.h, minimum/init.c, unlimited/system.h:
	Use CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER where needed.

2008-02-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* iostream/init.cc: Add include of stdlib.h for exit(). Needed by gcc
	4.3.x.

2008-01-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/system.h, ticker/system.h: Add new Object Services collection.
	This changed the name of a few previously public but undocumented
	services and added a some new services.

2008-01-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* hello/init.c: Remove accidental commit.

2008-01-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c, fileio/system.h, hello/init.c: Enable malloc
	statistics so shell output can be interesting.

2007-12-17	Chris Johns <chrisj@rtems.org>

	* testsuites/samples/fileio/init.c: Change shell_* to
	rtems_shell_*. Add the mount file-system type of msdos.

2007-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c, fileio/system.h: Increase stack requested for shell
	task. Turn on stack checking so the report is interesting.

2007-12-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c: Add RTEMS Shell configuration and static configuration
	of user commands.

2007-11-29	Chris Johns <chrisj@rtems.org>

	* iostream/Makefile.am: Change the executable name so it does not
	create a file which is the same name as the standard header file.
	* iostream/system.h: Need to increase the number of semaphores for
	the libstdc++ runtime.

2007-09-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* capture/Makefile.am: Use all managers.

2007-08-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* capture/Makefile.am: Fix typo -- not unlimited.
